public/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
    --mint: #C5D86D;
    --teal: #3D7A8B;
    --dark-teal: #013c4b;
}

* {
    box-sizing: border-box;
}

@media screen and (prefers-reduced-motion: reduce) {
    html {
        scroll-behavior: auto;
    }
}

/*Custom Scrollbar*/

/* width */
::-webkit-scrollbar {
    width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
    background-color: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background-color: #888;
    border-radius: 20px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background-color: #6a6a6a;
}

/* Text Selection */
::selection {
    background: #0060ff50;
}

.no-select {
    user-select: none;
}

html, body {
    margin: 0px;
    font-family: Oswald, sans-serif;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
    overflow-y: overlay;
}

body {
    min-height: 100vh;
    position: relative;
    overflow-y: hidden;
}

header {
    height: 80px;
    width: 100%;
    background: var(--teal);
    padding: 20px;
    padding-top: 15px;
    margin-bottom: 20px;
    font-family: Poppins, sans-serif;
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 50;
    transition: 0.5s;
}

h1 {
    margin: 0;
}

h2 {
    text-align: center;
    margin: 20px auto 16px;
}

p.question, p.answer {
    margin: 0 10px;
}

#error-box {
    margin: 0 auto;
    width: 500px;
    box-shadow: 4px 4px 6px 2px #cccccc;
    border-radius: 20px;
    height: 200px;
    border: 5px solid var(--mint);
    margin-bottom: 100px;
    padding: 20px;
}

header>h1>a,
header>h1>a:visited {
    float: left;
    margin: 0;
    color: var(--mint);
}

header>a,
header>a:visited {
    float: right;
    margin: 0;
    color: var(--mint);
    font-size: 20px;
    margin-top: 10px;
}

a,
a:visited {
    text-decoration: none;
    color: var(--teal);
    cursor: pointer;
}

nav {
    float: left;
    display: block;
    padding-left: 25px;
    font-size: 20px;
}

.navlink {
    display: block;
    float: left;
    padding: 10px;
}

.navlink>a,
.navlink>a:visited {
    color: var(--mint);
}

div.search {
    width: fit-content;
    display: block;
    margin: 0 auto;
}

#form {
    width: fit-content;
    margin: 0 auto;
}

div.login {
    display: block;
    float: left;
    width: 100%;
    margin: 4px;
    margin-bottom: 25px;
}

div.login > input {
    float: right;
}

input, button {
    font-family: Oswald, sans-serif;
}

div.login > button {
    font-family: Oswald, sans-serif;
    float: left;
}

label {
    float: left;
    margin-right: 10px;
}

.sign-in-switch,
a.sign-in-switch:visited {
    display: block;
    float: left;
    margin: auto;
    margin-bottom: 5px;
    font-size: 1.25em;
    clear: both;
}

#nav-login-signup {
    margin-top: 2px;
}

#nav-login {
    float: left;
    padding: 5px 15px;
    margin: 10px 0px;
    border-right: 1px solid var(--mint);
}

#nav-signup {
    float: right;
    padding: 5px 15px;
    margin: 10px 0px;
    border-left: 1px solid var(--mint);
}

div#nav-login > a, div#nav-signup > a {
    color: var(--mint);
}

.sign-in-title {
    margin: 0 auto;
    width: fit-content;
    padding-left: 20px;
    margin-bottom: 12px;
}

.sitemap-title, #sitemap {
    margin: 0 40px;
}

p {
    text-align: center;
    margin: auto;
}

#books {
    width: 70%;
    margin: 0 auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: stretch;
}

.row {
    height: 150px;
    padding: 1% 0;
}

.book {
    width: 31%;
    height: 98%;
    margin: 8px;
    padding: 10px;
    border: 1px solid var(--mint);
    color: var(--teal);
    overflow: visible;
    float: left;
    display: flex;
    justify-content: space-between;
    border-radius: 8px;
}

#books > .book {
    height: initial;
    flex-basis: 30%;
    width: auto;
    flex-grow: 2;
    min-height: 150px;
}

.bookimage {
    max-height: 150px;
    float: left;
    user-select: none;
    border-radius: 2px;
    box-shadow: 0px 0px 14px -4px var(--teal);
    /*padding: 4px;*/
    height: 100%;
}

#search-input {
    min-width: 275px;
    padding-left: 4px;
    font-size: 13.3333px;
}

#search-button-container {
    float: right;
    margin-left: 4px;
}

p.title,
p.author,
p.due-date,
p.audience,
p.medium,
p.barcode {
    text-align: right;
    margin: .25em 0;
}

p.subjects,
p.description {
    text-align: left;
    margin: .25em;
    white-space: pre-wrap;
}

div.basic-info {
    flex-grow: 2;
    margin: 0px 10px;
    margin-left: 12px;
    flex-shrink: 200;
}

#hamburger-button {
    display: none;
    font-size: 30px;
    color: var(--mint);
}

#close-button {
    padding: 17px;
    padding-left: 26px;
    display: none;
    font-size: 30px;
    color: var(--mint);
}

.welcome-text {
    margin: 0 10px;
    margin-top: 12px;
}

footer {
    background-color: var(--teal);
    display: block;
    width: 100%;
    float: left;
    text-align: center;
    position: absolute;
    bottom: 0;
    user-select: none;
}

.footer-div {
    width: 30%;
    padding: 20px 10px;
    margin: 0 auto;
    display: inline-block;
}

.footer-title {
    margin: 0;
    padding-bottom: 6px;
    width: unset;
    color: var(--dark-teal);
}

.footer-list {
    padding: 0;
    margin: 0;
}

.footer-list > li {
    list-style-type: none;
}

.footer-list > li > a { 
    color: var(--mint);
    padding-left: 1px;
}

.footer-bottom {
    background-color: var(--dark-teal);
    color: #ffffff;
    float: left;
    width: 100%;
    margin-top: 20px;
    text-align: center;
    padding: 3px;
    font-size: 14px;
}

#account-container {
    float: right;
    position: relative;
    top: -5px;
}

#large-account-container {
    display: none;
    z-index: 20;
    position: absolute;
    right: -500%;
    top: calc(100% + 12px);
    width: 300px;
    background-color: #f9f9f9;
    border-radius: 20px;
    box-shadow: 0px 0px 12px 0px #d9d9d9;
    text-align: center;
    padding: 20px;
    min-width: 125px;
    transition: 1s ease;
}

#large-account-image {
    margin: 10px auto;
    border-radius: 120px;
    box-shadow: 0px 0px 8px -2px #333333;
    max-height: 120px;
    border: 2px solid white;
    background-color: white;
}

#small-account-container {
    display: none;
    padding: 8px;
    margin-top: -5px;
    cursor: pointer;
}

#small-account-image {
    height: 50px;
    width: 50px;
    border-radius: 50px;
    border: 2.5px solid white;
    background-color: white;
    transition: box-shadow 0.25s;
}

#small-account-image:hover {
    box-shadow: 0px 0px 12px 0px #00000070;
}

#account-arrow {
    color: white;
    position: relative;
    bottom: 18px;
    margin-left: 6px;
    transition: text-shadow 0.25s;
}

#account-arrow:hover {
    text-shadow: -1px -1px 4px #00000050, -1px 1px 4px #00000050, 1px -1px 4px #00000050, 1px 1px 4px #00000050;
}

#log-out {
    float: left;
}

#account-settings {
    float: right;
}

.account-bottom {
    margin-top: 40px;
    border-top: 1px solid black;
    width: 50%;
    padding: 8px;
    font-size: 14px;
    padding-top: 20px;
    padding-bottom: 0px;
    vertical-align: bottom;
}

.account-bottom > a {
    color: black;
}

.account-bottom:hover {
    text-decoration: underline;
    cursor: pointer;
}

button.save-button {
    position: absolute;
    bottom: 16px;
}

.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 0.5s;
    animation-name: fade;
    animation-duration: 0.5s;
}

.fade-out {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 0.6s;
    -webkit-animation-direction: reverse;
    animation-name: fade;
    animation-duration: 0.6s;
    animation-direction: reverse;
}

@-webkit-keyframes fade {
    from {opacity: 0}
    to {opacity: 1}
}

@keyframes fade {
    from {opacity: 0}
    to {opacity: 1}
}

.book:hover, .result-listing:hover {
    cursor: pointer;
    box-shadow: 0px 0px 6px 2px #cccccc;
    transition: box-shadow 0.25s;
}

.book, .result-listing {
    opacity: 0;
    position: relative;
    transition: box-shadow 0.25s, opacity 0.3s;
}

img.icon {
    position: absolute;
    top: 0;
    right: 0;
    margin: 5px;
    z-index: 49;
    max-height: 32px;
    max-width: 32px;
    opacity: 0.15;
    transition: 0.5s;
}

img.icon:hover {
    opacity: 0.5;
}

#thumbnail-canvas, #original-canvas, #icon-canvas {
    display: none;
}

/* Content if screen is large */
@media screen and (max-width: 1440px) {
    #books {
        width: 90%;
    }

}

/* Content if screen is small */
@media screen and (max-width:1024px) {
    header > h1 {
        display: none;
    }

    nav {
        padding: 0;
    }

    #books {
        width: 98%;
    }

    .book {
        width: 31%;
    }
    
    #books > .book {
        flex-basis: 47%;
    }


    #small-account-container {
        margin-top: -5px;
    }

}

/* Content if screen is very small */
@media screen and (max-width:786px) {
    
    .book {
        width: 48%;
    }

    #books {
        width: 90%;
    }

    #books > .book {
        flex-basis: 100%;
    }

    nav > li {
        font-size: 17px;
    }

    nav {
        margin-top: 2px;
    }

    header > a {
        font-size: 17px;
    }

    .footer-div {
        width: 32%;
        padding: 20px 0px;
    }

    .footer-div:nth-child(1) {
        width: 45%;
    }

    .footer-div:nth-child(2) {
        width: 30%;
    }
    
    .footer-div:nth-child(3) {
        width: 20%;
    }

    .mainColumn {
        width: 100%;
    }
    

}

/* Content if screen is really small */
@media screen and (max-width:570px) {
    nav {
        position: fixed;
        left: 0;
        top: 0;
        z-index: 100;
        height: 100%;
        width: 0%;
        background-color: var(--teal);
        overflow: hidden;
        margin: 0;
    }

    nav > li > a {
        width: 0;
        padding-left: 20px;
        font-size: 20px;
        opacity: 0;
        display: none;
        transition: 0.5s;
        white-space: nowrap;
    }

    .navlink {
        float: none;
    }

    #hamburger-button {
        display: block;
        padding-left: 10px;
        float: left;
    }

    #hamburger-button:hover {
        cursor: pointer;
    }

    #close-button {
        font-size: 30px;
        transition: 0.5s;
    }

    #close-button:hover {
        cursor: pointer;
    }

}

    
/* Content if screen is super small */
@media screen and (max-width:500px) {
    .book {
        width: 98%;
    }

    #books {
        width: 100%;
    }

    #error-box {
        width: 98%;
    }

    .search {
        margin-bottom: 10px;
        width: 100%;
        text-align: center;
    }

    #search-input {
        min-width: 92vw;
        text-align: center;
        margin-bottom: 8px;
    }

    #search-button-container {
        float: none;
        margin-left: 0px;
    }

    .footer-div {
        width: 100% !important;
        padding: 15px 0px;
    }

    footer {
        padding-top: 22px;
    }

    div#footer-spacer {
        height: 500px !important;
    }

    #large-account-container {
        max-width: calc(100vw - 40px);
    }
    
}

